# drones

./: .pre-commit-config.yaml  Dockerfile  Dockerfile.test  conftest.py  docker-compose.yaml  pyproject.toml  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: lint.yaml  test.yaml
filebeat/: .env.sample  Dockerfile  README.md  filebeat.yml
libs/src/data_processors/: data_process_functions.py  data_validation.py
libs/src/listener/: listener.py  listener_factory.py
libs/src/listener_to_sender/: listener_to_sender.py  message_sender.py
libs/src/redis_cache/: connect_redis.py
libs/src/sender/: message_management.py  send_message.py  sender.py  sender_factory.py
libs/test/: conftest.py
libs/test/data_processors/: conftest.py  test_create_file.py  test_data_process_functions.py  test_data_validation.py
libs/test/listener/: conftest.py  test_listener_factory.py
libs/test/listener_to_sender/: conftest.py  test_listener_to_sender.py  test_message_sender.py
libs/test/logger/: conftest.py  test_w_logger.py
libs/test/redis_cache/: conftest.py  test_connect_redis.py
libs/test/sender/: conftest.py  test_message.py  test_message_management.py  test_sender_factory.py
offline_maps/: README.md  kibana.yml
offline_maps/maptiles/: config.json
product_production/: initialize.sh  main.py
product_production/src/modules/: calculate_area.py  calculate_area_per_sortie.py  classes_activating_process.py  sortie_functions.py
product_production/src/process/: calculate_unfinished_sortie.py  (+1 more)
product_production/test/: conftest.py  test_main.py
(+39 files in other folders)
