[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
[project]
name = "drone-monitoring"
version = "1.0.0"
description = "Drone monitoring system to reflect data and statuses of the drone and its sortie"
readme = {file = "README.md", content-type = "markdown"}
requires-python = ">=3.8"
license = {file = "LICENSE.md"}
classifiers = [
    "Programming Language :: Python",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Private :: Do Not Upload"
]
dependencies = [
    "certifi==2023.7.22",
    "elastic-transport==8.10.0",
    "elasticsearch==8.10.1",
    "iniconfig==2.0.0",
    "packaging==23.2",
    "urllib3==2.0.7",
    "setuptools",
    "pytest-env",
    "redis",
    "pika==1.3.2",
    "python-dotenv==1.0.1",
    "shapely",
    "pyproj",
    "utm",
    "schedule",
    "tenacity"
]
[project.optional-dependencies]
dev=[
    "pytest==8.1.1",
]
[tool.setuptools.packages.find]
where = ["libs/src","product_production/src"]
